--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,7 @@ h6 {
    Hero Section
    ========================================================================== */
 .hero-section{
-    background-image: url(../img/bg-keyboard.jpg);
+    background-image: url(../img/bg-keyboard.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -316,7 +316,7 @@ h6 {
     color: #ddd;
 }
 .hero-content h2{
-    font-size: 24px;
+    font-size: 44px;
     color: #ddd;
 }
 .hero-content h2 span{
@@ -526,7 +526,7 @@ h6 {
     z-index: 1;
 }
 .portfolio-content:before{
-    background-color: #fff;
+    background-color: #b7d8c7;
     position: absolute;
     content: "";
     width: 100%;
@@ -937,4 +937,27 @@ footer p a {
         -webkit-animation-delay: 1s;
         animation-delay: 1s;
     }
+}
+
+.video-container {
+    height: 200px;
+    width: 300px;
+    position: relative;
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+  z-index: 0;
+}
+
+/* Just styling the content of the div, the *magic* in the previous rules */
+.video-container .caption {
+  z-index: 1;
+  position: relative;
+  text-align: center;
+  color: #dc0000;
+  padding: 10px;
 }
